--- a/juego.ui
+++ b/juego.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Juego</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="Resourses.qrc">
+    <normaloff>:/Recursos/997782.png</normaloff>:/Recursos/997782.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -136,6 +140,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="Resourses.qrc"/>
+ </resources>
  <connections/>
 </ui>
